<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="name">Deniz Aygun</string>
    <string name="mail">denizaygn1907@gmail.com</string>
    <string name="home">Home</string>
    <string name="photo">Photos</string>
    <string name="movie">Movies</string>
    <string name="notification">Notifications</string>
    <string name="setting">Settings</string>
    <string name="other">Other</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>