<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_baseline_photo_library_24"
            android:title="@string/photo" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_baseline_movie_24"
            android:title="@string/movie" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about_us" />
            <item
                android:id="@+id/privacy"
                android:title="@string/privacy_policy" />
        </menu>

    </item>

</menu>